# phonepad

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: build.yml
.totti/.totti/快捷任务/: 上传Release.md  丢弃当前变更.md  代码审查.md  打包安装.md  拉取最新代码.md  提交git.md
apps/android/: local.properties.example  settings.gradle.kts
apps/android/app/: build.gradle.kts  proguard-rules.pro
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/java/cn/phonepad/: ConnectionManager.kt  MainActivity.kt
apps/android/app/src/main/java/cn/phonepad/haptics/: HapticsManager.kt
apps/android/app/src/main/java/cn/phonepad/logging/: PhonePadLogger.kt
apps/android/app/src/main/java/cn/phonepad/model/: PairedDevice.kt  PairedDeviceExtensions.kt
apps/android/app/src/main/java/cn/phonepad/net/: ControlClient.kt  DiscoveryClient.kt  FileTransferClient.kt  InputSender.kt  LanAddress.kt  PairingUrlParser.kt  TcpStatusReader.kt
apps/android/app/src/main/java/cn/phonepad/protocol/: Protocol.kt
apps/android/app/src/main/java/cn/phonepad/storage/: PairedDeviceStore.kt
apps/android/app/src/main/java/cn/phonepad/touch/: GestureRecognizer.kt  TouchpadEngine.kt  TouchpadSurfaceView.kt
apps/android/app/src/main/java/cn/phonepad/ui/: KeyboardInputScreen.kt  PhonePadApp.kt  QrScanActivity.kt  TouchpadSurface.kt
apps/android/app/src/main/res/layout/: activity_qr_scan.xml
apps/android/app/src/main/res/values/: strings.xml  themes.xml
apps/android/app/src/test/java/cn/phonepad/logging/: PhonePadLoggerTest.kt
apps/android/app/src/test/java/cn/phonepad/net/: FileTransferClientTest.kt  LanAddressTest.kt  PairingUrlParserTest.kt
apps/android/app/src/test/java/cn/phonepad/protocol/: ProtocolTest.kt
apps/android/app/src/test/java/cn/phonepad/touch/: GestureRecognizerTest.kt  TouchpadEngineTest.kt
apps/desktop/: index.html  package.json
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: device_config.rs  file_transfer.rs  focus.rs  gesture.rs  input.rs  logging.rs  main.rs  motion_aggregator.rs  notify.rs  pairing.rs  platform.rs  preferences.rs  receiver.rs  screenshot.rs  settings.rs  state.rs  tray.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
docs/: install.md  latency-test.md  protocol.md  troubleshooting.md
scripts/: build.ps1  delete-totti-pad.ps1
